...
                ) {
                    Icon(
                        painterResource(id = R.drawable.ic_scale),
                        contentDescription = "Search Icon"
                    )
                    Spacer(modifier = Modifier.width(12.dp))
                    OutlinedTextField(modifier = Modifier.fillMaxWidth().testTag("consumedAmount"),
                        label = { Text(text = "Consumed amount in gram") },
                        value = viewModel.amountInGram,
                        keyboardOptions = KeyboardOptions.Default.copy(keyboardType = KeyboardType.Number),
                        onValueChange = {
                            if (it.isEmpty()) viewModel.amountInGram = ""
                            else if (viewModel.isFloat(it)) viewModel.amountInGram = it
...
        openAlertDialogEditKcal -> {
            AlertDialog(onDismissRequest = { openAlertDialogEditKcal = false }, confirmButton = {
                TextButton(onClick = {
                    viewModel.onSetKcalGoalClick()
                    openAlertDialogEditKcal = false
                }) {
                    Text("Confirm")
                }
            }, title = {
                Text(text = "Update kcal goal")
            }, text = {
                Column {
                    OutlinedTextField(
                        modifier = Modifier.testTag("txt_kcal_goal"),
                        label = { Text(text = "Kcal goal") },
                        value = viewModel.dialogKcalGoal,
                        onValueChange = viewModel::updateDialogKcalGoal,
                        keyboardOptions = KeyboardOptions.Default.copy(keyboardType = KeyboardType.Number)
                    )
                }
...
                }
            }, title = {
                Text(text = "Update protein goal")
            }, text = {
                Column {
                    OutlinedTextField(
                        modifier = Modifier.testTag("txt_protein_goal"),
                        label = { Text(text = "Protein goal") },
                        value = viewModel.dialogProteinGoal,
                        onValueChange = viewModel::updateDialogProteinGoal,
                        keyboardOptions = KeyboardOptions.Default.copy(keyboardType = KeyboardType.Number)
                    )
                }
...
    Column(modifier = Modifier.fillMaxSize()) {
        Column(modifier = Modifier.padding(horizontal = 16.dp)) {
            Text(
                text = "Today", style = MaterialTheme.typography.displayLarge
            )
            Text(
                text = dayWithItems?.getFormattedDate() ?: "Day not found",
                style = MaterialTheme.typography.titleLarge,
                modifier = Modifier.alpha(0.5f)
            )

            Spacer(modifier = Modifier.height(30.dp))
        }
        Column(
            modifier = Modifier.padding(horizontal = 24.dp)
        ) {
            Row(
                modifier = Modifier.fillMaxWidth()
            ) {
                NutrientItem(modifier = Modifier.weight(1f), testTag = "btn_edit_protein",
                    painter = painterResource(R.drawable.ic_grocery),
                    title = {
                        Text(
                            style = MaterialTheme.typography.titleMedium, text = "Protein"
                        )
                    },
...
                        openAlertDialogEditProtein = true
                    })
                Spacer(modifier = Modifier.width(16.dp))



                NutrientItem(modifier = Modifier.weight(1f),testTag = "btn_edit_kcal",
                    painter = painterResource(R.drawable.ic_lunch_dining),
                    title = { Text(style = MaterialTheme.typography.titleMedium, text = "Kcal") },
                    text = {
                        Text(
                            "You've consumed ${viewModel.kcalGoal} Kcal.",
                            style = MaterialTheme.typography.bodyMedium
...
