...
                                historyViewModel.onFabClick()
                            else if (navController.currentBackStackEntry?.destination?.route == "items")
                                itemsViewModel.onFabClick()
                        },
                            content = {
                                Icon(
                                    imageVector = Icons.Default.Add, contentDescription = "Add Icon"
                                )
                            })
                    })
                }
            }
        }
...
